--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="heroCatlog">
-                    <img src="./assets/images/fourth.png" alt="">
+                    <img src="./assets/images/first.png" alt="">
                 </div>
             </div>
             <div class="hero ">
