--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sat-Task2</title>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
@@ -41,35 +41,46 @@
             </div>
         </div>
 
+        <div class="heroText" id="contentContainer">
+            <div class="text changing-text">
+                <b>Micro</b> to <b>small</b> to <b>medium</b> to <b>large</b>, We help you <b>Business Grow</b>
+            </div>
+            <div class="text changing-text">
+                <b>Calculate</b> your <b>Working Capital Bank Finance Limit</b>
+            </div>
+            <div class="text changing-text">
+                <b>Pitch to VCs</b> or <b>Switch to Lower Cast Debt</b> 
+            </div>
+        </div>
         <div class="herosection owl-carousel owl-theme">
             <div class="hero ">
-                <div class="heroText">
+                <!-- <div class="heroText">
                     <div class="text">
                         <b>Micro</b> to <b>small</b> to <b>medium</b> to <b>large</b>, We help you <b>Business Grow</b>
                     </div>
-                </div>
+                </div> -->
                 <div class="heroCatlog">
                     <img src="./assets/images/first.png" alt="">
                 </div>
             </div>
             <div class="hero ">
-                <div class="heroText">
+                <!-- <div class="heroText">
                     <div class="text">
                         <b>Calculate</b> your <b>Working Capital Bank Finance Limit</b>
                     </div>
-                </div>
+                </div> -->
                 <div class="heroCatlog">
-                    <img src="./assets/images/fourth.png" alt="">
+                    <img src="./assets/images/seven.gif" alt="">
                 </div>
             </div>
             <div class="hero ">
-                <div class="heroText">
+                <!-- <div class="heroText">
                     <div class="text">
                         <b>Micro</b> to <b>small</b> to <b>medium</b> to <b>large</b>, We help you <b>Business Grow</b>
                     </div>
-                </div>
+                </div> -->
                 <div class="heroCatlog">
-                    <img src="./assets/images/first.png" alt="">
+                    <img src="./assets/images/eight.png" alt="">
                 </div>
             </div>
         </div>
